tests/baselines/reference/downlevelLetConst12.errors.txt
tests/cases/compiler/downlevelLetConst12.ts(6,6): error TS2525: Initializer provides no value for this binding element and the binding element has no default value.
tests/cases/compiler/downlevelLetConst12.ts(9,8): error TS2525: Initializer provides no value for this binding element and the binding element has no default value.


==== tests/cases/compiler/downlevelLetConst12.ts (2 errors) ====
    'use strict'
    // top level let\const should not be renamed
    let foo;
    const bar = 1;
    
    let [baz] = [];
         ~~~
!!! error TS2525: Initializer provides no value for this binding element and the binding element has no default value.
    let {a: baz2} = { a: 1 };
    
    const [baz3] = []
           ~~~~
!!! error TS2525: Initializer provides no value for this binding element and the binding element has no default value.
    const {a: baz4} = { a: 1 };